--- a/src/components/projects.json
+++ b/src/components/projects.json
@@ -15,6 +15,210 @@
      {
       "projectName":"base-apparel-coming-soon",
       "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
-     }
+     },
+     {
+      "projectName":"base-apparel-coming-soon",
+      "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+     },
+     {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "intro-component-with-sign-up-form",
+      "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "results-summary-component",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg"
+    },
+    {
+      "projectName": "interactive-rating-component",
+      "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    },
+    {
+     "projectName":"base-apparel-coming-soon",
+     "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg"
+    }
    ]
  }
