--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@dotlottie/player-component": "^1.4.1",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
