🛠 Fix: Fixed img url for results summary component

--- a/src/components/projects.json
+++ b/src/components/projects.json
@@ -21,7 +21,7 @@
      {
       "title": "Results Summary Component",
       "projectName": "results-summary-component",
-      "imageUrl" : "/results-summary-component/main/design/desktop-preview.jpg",
+      "imageUrl" : "/results-summary-component/main/design/desktop-preview2.webp",
       "link" : "https://github.com/davidochoadev/results-summary-component"
     }
    ]
