🛠 Fix: Fixed base apparel link img

--- a/src/components/projects.json
+++ b/src/components/projects.json
@@ -9,7 +9,7 @@
      {
       "title": "Base Apparel Coming Soon",
       "projectName":"base-apparel-coming-soon",
-      "imageUrl":"/base-apparel-coming-soon/main/design/desktop-preview.jpg",
+      "imageUrl":"/base-apparel-coming-soon/main/design/desktop_preview.webp",
       "link" : "https://github.com/davidochoadev/base-apparel-coming-soon"
      },
      {
