🛠 Fix: Fixed rating component link img

--- a/src/components/projects.json
+++ b/src/components/projects.json
@@ -15,7 +15,7 @@
      {
        "title": "Interactive Rating Component",
        "projectName": "interactive-rating-component",
-       "imageUrl" : "/interactive-rating-component/main/design/desktop-preview.jpg",
+       "imageUrl" : "/interactive-rating-component/main/design/bg.webp",
        "link" : "https://github.com/davidochoadev/interactive-rating-component"
      },
      {
