--- a/src/components/projects.json
+++ b/src/components/projects.json
@@ -4,25 +4,29 @@
        "title": "Intro Component With Sign Up Form",
        "projectName": "intro-component-with-sign-up-form",
        "imageUrl": "/intro-component-with-sign-up-form/main/design/desktop-preview.webp",
-       "link" : "https://github.com/davidochoadev/intro-component-with-sign-up-form"
+       "link" : "https://github.com/davidochoadev/intro-component-with-sign-up-form",
+       "tools": ["Astro","React", "TypeScript", "TailwindCSS"]
      },
      {
       "title": "Base Apparel Coming Soon",
       "projectName":"base-apparel-coming-soon",
       "imageUrl":"/base-apparel-coming-soon/main/design/desktop_preview.webp",
-      "link" : "https://github.com/davidochoadev/base-apparel-coming-soon"
+      "link" : "https://github.com/davidochoadev/base-apparel-coming-soon",
+      "tools" : ["HTML5","CSS3", "JavaScript"]
      },
      {
        "title": "Interactive Rating Component",
        "projectName": "interactive-rating-component",
        "imageUrl" : "/interactive-rating-component/main/design/bg.webp",
-       "link" : "https://github.com/davidochoadev/interactive-rating-component"
+       "link" : "https://github.com/davidochoadev/interactive-rating-component",
+       "tools" : ["Astro", "JavaScript", "TailwindCSS"]
      },
      {
       "title": "Results Summary Component",
       "projectName": "results-summary-component",
       "imageUrl" : "/results-summary-component/main/design/desktop-preview2.webp",
-      "link" : "https://github.com/davidochoadev/results-summary-component"
+      "link" : "https://github.com/davidochoadev/results-summary-component",
+      "tools" : ["Astro","React", "JavaScript", "TailwindCSS"]
     }
    ]
  }
