--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.0",
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
     "@types/react": "^18.2.12",
